--- a/BaseProject/.settings/gradle/org.springsource.ide.eclipse.gradle.core.prefs
+++ b/BaseProject/.settings/gradle/org.springsource.ide.eclipse.gradle.core.prefs
@@ -1,4 +1,5 @@
 #org.springsource.ide.eclipse.gradle.core.preferences.GradleProjectPreferences
-#Mon Aug 31 16:44:52 BRT 2015
+#Mon Sep 07 08:29:22 BRT 2015
 build.family.org.gradle.tooling.model.eclipse.HierarchicalEclipseProject=;
+org.springsource.ide.eclipse.gradle.linkedresources=
 org.springsource.ide.eclipse.gradle.rootprojectloc=
